--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.86"
+get-size = "0.1.4"
+sha3 = "0.10.8"
+uuid = { version = "1.10.0", features = ["v4"] }
+
+[[bin]]
+name = "brynza-cli"
+test = false
+bench = false
+
+[[bin]]
+name = "brynza-db"
